# Asset-Vault

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3414ea1f885e_initial_schema.py  a1b2c3d4e5f6_asset_is_public.py  a7b8c9d0e1f2_user_is_guest.py  b2c3d4e5f6a7_likes_and_comments.py  c3d4e5f6a7b8_comment_replies.py  d4e5f6a7b8c9_community_ratings.py  e5f6a7b8c9d0_remove_ratings.py  f6a7b8c9d0e1_asset_content_hash.py  fc166700d5fa_oauth_user_fields.py  ff5779a44f45_folders.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: assets.py  auth.py  categories.py  folders.py  health.py  tags.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  asset.py  associations.py  category.py  comment.py  folder.py  like.py  tag.py  user.py
backend/app/schemas/: asset.py  auth.py  category.py  comment.py  folder.py  tag.py  token.py  user.py
backend/app/services/: __init__.py  color.py  google_auth.py  media.py  storage.py
backend/scripts/: __init__.py  seed.py
backend/tests/: conftest.py  helpers.py  test_asset_public.py  test_asset_search.py  test_assets.py  test_auth.py  test_folders.py  test_google_auth.py  test_guest.py  test_health.py  test_models.py  test_social.py  test_taxonomy.py
frontend/: package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/live/: helpers.ts  smoke.spec.ts
frontend/e2e/mocked/: auth.spec.ts  fixtures.ts  gallery.spec.ts
frontend/src/: App.css  App.tsx  config.ts  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: assets.ts  auth.ts  client.ts  folderTree.ts  folders.ts  social.ts  taxonomy.ts  types.ts
(+24 files in other folders)
